samples/_failures_safe/1761363506_f4d83a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e83002c0.c: In function ‘main’:
./samples/SAFE/__tmp_e83002c0.c:152:16: error: missing terminating " character
  152 |         printf("3
      |                ^~
./samples/SAFE/__tmp_e83002c0.c:152:9: error: expected expression at end of input
  152 |         printf("3
      |         ^~~~~~
./samples/SAFE/__tmp_e83002c0.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e83002c0.c:152:9: error: expected declaration or statement at end of input
